end of chapter 7

--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -6,6 +6,7 @@
  <body>
    <div class="">
      <a href="/">back to index</a>
+     <a href="/rango/category/{{category.slug}}/add_page/">add page</a>
    </div>
     <div>
     {% if category %}
