--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -41,8 +41,10 @@
 </div>
 </br>
   <div>
+    <a href="/rango/add_category/">Add a New Category</a><br />
     <a href="/rango/about/">About Rango</a><br />
     <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+
   </div>
 </body>
 </html>
