--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -5,6 +5,9 @@
 {% endblock %}
 
 {% block body_block %}
+<div class="">
+  You visited {{visits}} times this website
+</div>
       <div>
         <h1 class="page-header">About Page</h1>
         This tutorial has been put together by: conorek
