--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -7,7 +7,7 @@
 	{% block body_block %}
 		<div>
 			<h1>Add a Category</h1>
-			<form role="form" id="category_form" method="post" action="{% url 'add_category' %}">
+			<form role="form" id="category_form" method="post" action="{% url 'rango:add_category' %}">
 				{% csrf_token %}
 				{% for hidden in form.hidden_fields %}
 	                {{ hidden }}
