--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -6,7 +6,9 @@
 
 <body>
     <h1>Rango says...</h1>
-
+  <div class="">
+    You visited {{visits}} times this website
+  </div>
     <div>
       {% if user.is_authenticated %}
         howdy {{ user.username }}!
