--- a/templates/rango/login.html
+++ b/templates/rango/login.html
@@ -14,5 +14,8 @@
   Password: <input type="password" name="password" value="" size="50" />
   <br />
   <input type="submit" value="submit" />
+  <div class="">
+    {{errors}}
+  </div>
 </form>
 {% endblock %}
